Better exception handling when encrypting and decrypting.